[package]
name = "advent_of_code_2018"
version = "0.1.0"
authors = ["Christopher Luu <nuudles@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
counter = "0.5.2"
itertools = "0.10.3"
pathfinding = "3.0.5"
cached = "0.29.0"
